# freeswitch

./: configure.ac
conf/vanilla/autoload_configs/: modules.conf.xml
src/mod/endpoints/mod_janus/: Makefile.am  api.c  api.h  mod_janus.c
